feat: create seller section
